--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,8 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  << adapter: postgresql
   database: marcia_production
   username: marcia
   password: <%= ENV['MARCIA_DATABASE_PASSWORD'] %>
+  
